Fixes panel height if name is too large

--- a/site_pet/static/css/members.css
+++ b/site_pet/static/css/members.css
@@ -1,3 +1,6 @@
+.panel.panel-default {
+    min-height: 153px;
+}
 .panel-body .img-circle {
     width: 64px;
     height: 64px;
@@ -14,5 +17,8 @@
 .panel-body a i.fa:hover {
     color: #32497a;
 }
-
-
+.panel-body h4 {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
